--- a/index.html
+++ b/index.html
@@ -3,25 +3,24 @@
 <head>
 	<meta charset="utf-8">
 	<title>PintRSSt</title>
+	<meta content='width=device-width, initial-scale=1' name='viewport'>
+	<link rel="stylesheet" href="grid.css">
+	<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
+	<script src="salvatore.delayed.js" type="text/javascript"></script>
+	<script src="pintrss-mashup.js" type="text/javascript"></script>
+	<script type="text/javascript">
+		$(document).ready(function() { // Load PINT
+			$('#timeline').pintRSSt({
+			}); // Show PINT
+			setTimeout(function(){$('#timeline').addClass('loaded');},500);
+		});
+	</script>
 </head>
 <body>
 
-	<ul id="pinterest"></ul>
+	<ul id="timeline" data-columns></ul>
 
-	<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
-	<script src="pintrsst.js" type="text/javascript"></script>
-	<script type="text/javascript">
-		$(document).ready(function() {
-			$('#pinterest').pintRSSt({
-				// RSS feed for the board
-				boardRSS: 'http://pinterest.com/tacobell/doritos-locos-tacos.rss',
-				// number of pins
-				items: 7,
-				// container element for each pin, default is li
-				container: 'li'
-			});
-		});
-	</script>
-	
+
+
 </body>
 </html>
