--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta content='width=device-width, initial-scale=1' name='viewport'>
 	<link rel="stylesheet" href="grid.css">
 	<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
-	<script src="salvatore.delayed.js" type="text/javascript"></script>
+	<script src="salvatore.min.js" type="text/javascript"></script>
 	<script src="pintrss-mashup.js" type="text/javascript"></script>
 	<script type="text/javascript">
 		$(document).ready(function() { // Load PINT
